--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,6 @@
         <!--Plugin Versions-->
         <driver-binary-downloader-maven-plugin.version>1.0.16</driver-binary-downloader-maven-plugin.version>
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
-        <maven-failsafe-plugin.version>2.20.1</maven-failsafe-plugin.version>
         <!--Configuration Properties-->
         <overwrite.binaries>false</overwrite.binaries>
         <read.timeout>30000</read.timeout>
@@ -158,8 +157,8 @@
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>${maven-failsafe-plugin.version}</version>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.20.1</version>
                         <configuration>
                             <parallel>methods</parallel>
                             <threadCount>${threads}</threadCount>
@@ -186,9 +185,7 @@
                         <executions>
                             <execution>
                                 <goals>
-                                    <goal>integration-test</goal>
-                                    <!--This goal makes the build fail if you have test failures-->
-                                    <goal>verify</goal>
+                                    <goal>test</goal>
                                 </goals>
                             </execution>
                         </executions>
